--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "nanoid": "^3.3.4",
     "npm": "^9.2.0",
     "pm2": "^5.2.2",
+    "validator": "^13.6.0",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
